--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>HTML, CSS and JavaScript demo</title>
 
+<link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+<hr> 
+
+<script src="mine.js">
+</script>
+
+</body>
+</html>
