--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HTML, CSS and JavaScript demo</title>
+<title>кринге</title>
 
 <link rel="stylesheet" href="style.css">
 
